--- a/docs/static/paycheck.css
+++ b/docs/static/paycheck.css
@@ -6,6 +6,18 @@
       TODO - this file - none of the css file appear to do anything! - unless conetnt is includedin html!!
   */
 
+.hrs-table {
+
+}
+
+.hrs-row {
+
+}
+
+.hrs-item {
+
+}
+
 
 .item {
   padding: 8px;
@@ -14,4 +26,5 @@
   border-radius: 6px;
   box-shadow: 0px 2px 6px rgba(0, 0, 0, 0.25);
 }
+
 </style>
