--- a/docs/static/paycheck.css
+++ b/docs/static/paycheck.css
@@ -1,23 +1,60 @@
-<style>
+/*    tag
+    . class
+    # id
+    TODO - this file - none of the css file appear to do anything! - unless conetnt is includedin html!!
+*/
 
-  /*    tag
-      . class
-      # id
-      TODO - this file - none of the css file appear to do anything! - unless conetnt is includedin html!!
-  */
-
-.hrs-table {
-
+body {
+  margin-top: 0px;
+  margin-bottom: 0px;
 }
 
-.hrs-row {
-
+button {
+  height: 2.8vh;
+  width: 3.8vw;
 }
 
-.hrs-item {
-
+.font-portrait {
+  font-size: 2.25vh;
 }
 
+input {
+  font-size: 2.45vh;
+  width: 12vw;
+}
+.paycheck-container td {
+  width: 18vw;
+}
+.td-date {
+  width: 20vw;
+}
+
+.paycheck-container {
+  display: grid;
+  height: 100vh;
+  grid-template-rows: repeat(5, auto);
+  row-gap: 4px;         /* gap: for row-gap: & column-gap: */  
+}
+
+.paycheck-container .summary {
+  grid-row: 1 / span 5;
+}
+
+.paycheck-container .daily-hours {
+  grid-row: 6 / span 10;
+}
+
+.paycheck-container .week-totals {
+  grid-row: 16 / span 6;
+}
+
+.paycheck-container .totals {
+  grid-row: 22 / span 8;
+}
+
+.paycheck-container .debug {
+  grid-row: 30 / span 4;
+}
 
 .item {
   padding: 8px;
@@ -26,5 +63,3 @@
   border-radius: 6px;
   box-shadow: 0px 2px 6px rgba(0, 0, 0, 0.25);
 }
-
-</style>
