--- a/docs/static/paycheck.css
+++ b/docs/static/paycheck.css
@@ -5,8 +5,9 @@
 */
 
 body {
-  margin-top: 0px;
-  margin-bottom: 0px;
+  margin: 0px;
+  /*margin-top: 0px;*/
+  /*margin-bottom: 0px;*/
 }
 
 button.title-text {
