--- a/docs/static/paycheck.css
+++ b/docs/static/paycheck.css
@@ -75,6 +75,10 @@ body {
   text-align: center;
 }
 
+#tax_code {
+  width: 25vw;
+}
+
 /* BUTTON flex boxes */
 /* flex  items left just - spacebox - item right just */
 /* DDD EEE - - - - - - - AAA BBB CCC*/
@@ -142,9 +146,24 @@ body {
 .week-day-font {
   font-size: 2.2vh;
 }
+.hrs-row {
+  padding: 0vh 0vw;
+}
+
+.col1,
+.col2,
+.col3,
+.col4,
+.col5,
+.col6,
+.col7 {
+  width: 20vw;
+}
+
 
 .col1 {
   text-align: left;
+  width: 5vw;
 }
 .col2 {
   text-align: left;  
@@ -152,12 +171,37 @@ body {
 .col3 {
   text-align: center;
 }
-.col4 {
-  text-align: left; 
+.col3 label {
+  
+}
+.col4 { /* BRK? */
+  text-align: left;
+}
+.hrs-head .col4{
+  text-align: center;
 }
 .col5 {
   text-align: center;
 }
+/* cols 3,4,5 in, brk, out*/
+label.imgSelect, .col4 .break {
+  display: inline-block;
+  vertical-align: top;  
+  padding: 2px;
+  margin: 2px;  
+  width: 94%;
+  /*width: 20vw;*/
+  height: 2vh;
+  border: 2px solid #444;
+  border-radius: 3px;
+  background-color: #F7FFF2;
+}
+/* hides the 'Choose file' text box for camera inputs */
+label.imgSelect input[accept*="image"] {
+  display: none;
+}
+
+
 .col6 {
   text-align: center;
 }
@@ -165,72 +209,24 @@ body {
   text-align: center;
 }
 
-input {  
-  width: 12vw;
-}
-.paycheck-container td {
-  width: 18vw;
-}
 
-/*.td-date { width: 20vw; }*/
-
-#tax_code {
-  width: 25vw;
-}
-
-
-
-/* tbc - table column */
-.hrs-row {
-  text-align: left;
-  padding-top: 1vh;
-  padding-bottom: 1vh;  
-}
 .wk-row {
   text-align: left;
 }
-
 .space-box {
   background: #FDFFF5;
 }
-
-label.imgSelect {
-  display: inline-block;
-  padding: 2px;
-  margin: 2px;  
-  width: 94%;
-  /*width: 2em;*/
-  /*height: 94%;*/
-  height: 2vh;
-  /*height: 1em;*/
-  /* Styles to make it look like a button */
-  border: 2px solid #111;
-  border-radius: 6px;
-  /*border-color: #000;*/
-  background-color: #FFF;
-  text-align:center;
-}
-
-.break {
-  width: 94%;
-  height: 94%;
-  border: 2px solid #111;
-  border-radius: 6px;
-  background-color: #FFF;
-  text-align:center;  
-}
-
-/* hides the 'Choose file' text box for camera inputs */
-label.imgSelect input[accept*="image"] {
-  display: none;
-}
 /* - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - */
 
+
+#ct_week_totals td {
+  width: 18vw;
+}
 /* summary table */
+/* tbc - table column */
 .tbc.name {
   width: 80vw;  
 }
-
 .tbc.fin_data {
   width: 15vw;
   text-align: right;
