--- a/docs/static/paycheck.css
+++ b/docs/static/paycheck.css
@@ -65,10 +65,7 @@ body {
 }
 
 .lr-button > img {
-  /* position: absolute;           /* keep button in the middle */
-  border: 1px;
-  border-color: #424242;
-  height: 100%;
+  height: 100%;   /* keep button in the middle */
 }
 
 .font-portrait {
