--- a/docs/static/paycheck.css
+++ b/docs/static/paycheck.css
@@ -139,17 +139,47 @@ body {
   padding: 0.5vw;
 }
 
-#mail_img {
-  width: 10vw;
-}
+
 
 #mailto_d {
-  /*border: 1px solid #BF00FF;*/
+  display: flex;
+  flex-direction: row;
+  justify-content: space-around;
+  align-items: center;  
   padding: 0.1vh 4vw;
   border: 0px;
   margin: 0px;  
-  /*border-radius: 6px;*/
 }
+#mailto_d > img{
+  width: 10vw;
+}
+#mail_img {
+  padding-right: 6vw;
+}
+#debug_img {
+  border: 1px solid #444;
+  border-radius: 6px;
+}
+#help_img {
+  border: 1px solid #444;
+  border-radius: 6px;
+}
+
+/*#flash_dbg_dev{
+  position: fixed;
+  top: 50vh;
+  left: 50vw;
+  width: 80vw;
+  margin-left: -43vw;
+  height: 50vh;
+  margin-top: -40%;
+  border: 2px solid #444;
+  border-radius: 6px;
+  background-color: #F0FF54;
+  padding: 10px;  
+  opacity: 94%;
+}*/
+
 
 
 /* - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - */
