--- a/docs/static/paycheck.css
+++ b/docs/static/paycheck.css
@@ -165,8 +165,8 @@ body {
   border-radius: 6px;
 }
 
-/*#flash_dbg_dev{
-  position: fixed;
+.flash-dbg{
+  position: fixed;                
   top: 50vh;
   left: 50vw;
   width: 80vw;
@@ -176,10 +176,16 @@ body {
   border: 2px solid #444;
   border-radius: 6px;
   background-color: #F0FF54;
+  font-size: 2vh;
   padding: 10px;  
-  opacity: 94%;
-}*/
+  opacity: 0%;
+  transition-property: opacity;
+  transition-duration: 250ms;
+}
 
+.flash-dbg-show{
+  opacity: 94%;
+}
 
 
 /* - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - */
