--- a/docs/static/paycheck.css
+++ b/docs/static/paycheck.css
@@ -164,8 +164,20 @@ body {
   border: 1px solid #444;
   border-radius: 6px;
 }
+#qr_but {
+  border: 1px solid #444;
+  border-radius: 6px;
+  align-content: center;
+  background-color: buttonface;
+  font-size: 5vw;
+  padding: 1vw;
+  width: 10vw;  
+}
+.btn-disable {
+  pointer-events: none;
+}
 
-.flash-dbg{
+.flash {
   position: fixed;                
   top: 50vh;
   left: 50vw;
@@ -175,17 +187,25 @@ body {
   margin-top: -40%;
   border: 2px solid #444;
   border-radius: 6px;
-  background-color: #F0FF54;
   font-size: 2vh;
   padding: 10px;  
   opacity: 0%;
   transition-property: opacity;
   transition-duration: 250ms;
 }
-
+.flash-dbg {
+  background-color: #F0FF54;
+}
+.flash-qr {
+  background-color: #F6FCE8;
+}
 .flash-dbg-show{
   opacity: 94%;
 }
+.flash-qr-show{
+  opacity: 100%;
+}
+
 
 
 /* - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - */
