--- a/docs/static/paycheck.css
+++ b/docs/static/paycheck.css
@@ -198,6 +198,14 @@ body {
 }
 .flash-qr {
   background-color: #F6FCE8;
+  display: flex;
+  justify-content: center;
+  align-items: center;  
+}
+.flash-qr > img {
+  width: 90%;
+  margin: auto;
+  display: block;
 }
 .flash-dbg-show{
   opacity: 94%;
